--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/eslint index.js",
-    "start": "supervisor index.js"
+    "start": "node index.js"
   },
   "eslintConfig": {
     "extends": "standard",
