--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
       "node": true
     },
     "plugins": [
-        "standard",
-        "promise"
+      "standard",
+      "promise"
     ],
     "rules": {
-      "semi": ["error", "always"]
+      "semi": [
+        "error",
+        "always"
+      ]
     }
   },
   "author": "SNAP",
   "license": "MIT",
   "dependencies": {
     "bluebird": "3.5.0",
+    "csv-parse": "1.2.0",
     "express": "4.15.2",
     "lodash": "4.17.4",
+    "moment": "2.18.1",
     "node-cache": "4.1.1",
-    "request": "2.81.0"
+    "request": "2.81.0",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "eslint": "3.19.0",
