--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "lodash": "4.17.4",
     "moment": "2.18.1",
     "node-cache": "4.1.1",
-    "request": "2.81.0",
-    "underscore": "1.8.3"
+    "request": "2.81.0"
   },
   "devDependencies": {
     "eslint": "3.19.0",
