--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "lodash": "4.17.4",
     "moment": "2.18.1",
     "node-cache": "4.1.1",
-    "request": "2.81.0"
+    "request": "2.81.0",
+    "winston": "2.3.1"
   },
   "devDependencies": {
     "eslint": "3.19.0",
