--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "2.18.1",
     "node-cache": "4.1.1",
     "request": "2.81.0",
+    "shpjs": "^3.4.2",
     "winston": "2.3.1"
   },
   "devDependencies": {
