--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
   "dependencies": {
     "bluebird": "3.5.0",
     "csv-parse": "1.2.0",
-    "express": "4.15.2",
-    "lodash": "4.17.4",
-    "moment": "2.18.1",
+    "express": "^4.16.4",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-cache": "4.1.1",
-    "request": "2.81.0",
+    "request": "^2.88.0",
     "winston": "2.3.1"
   },
   "devDependencies": {
-    "eslint": "3.19.0",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "10.2.1",
-    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "4.2.2",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1"
