--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "3.5.0",
+    "cors": "^2.8.5",
     "csv-parse": "1.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.11",
